# kredilibranza_rag

./: README.md
.github/workflows/: main.yml
Backend/: .coverage  .gitignore  .pre-commit-config.yaml  hola.txt  pyproject.toml
Backend/.github/workflows/: ci.yml  main.yml  python-app.yml
Backend/app/: configurations.py  main.py  usecases.py
Backend/app/adapters/: document_extractors.py  mongodb_adapter.py  openai_adapter.py
Backend/app/api/: dependencies.py  routers.py
Backend/app/core/: ports.py  schemas.py
Backend/app/test/: _test.py
Backend/test/: cases_test.py
Kredilibranza FrontEnd/Kredilibranza/: package-lock.json  package.json
Kredilibranza FrontEnd/Kredilibranza/src/: App.js
Kredilibranza FrontEnd/Kredilibranza/src/componentes/: FileUpload.css  FileUpload.jsx  Login.jsx  NavBar.jsx  chatbot.jsx
Kredilibranza FrontEnd/Kredilibranza/src/components/ui/: Button.jsx  Checkbox.jsx  Input.jsx  Label.jsx  index.js
Kredilibranza FrontEnd/Kredilibranza/src/features/auth/: index.js
Kredilibranza FrontEnd/Kredilibranza/src/features/chatbot/: index.js
Kredilibranza FrontEnd/Kredilibranza/src/features/company-info/: index.js
Kredilibranza FrontEnd/Kredilibranza/src/features/file-management/: index.js
Kredilibranza FrontEnd/Kredilibranza/src/features/form-submission/: index.js
Kredilibranza FrontEnd/Kredilibranza/src/layouts/: Footer.css  Footer.jsx  Header.jsx  MainLayout.jsx  NavBar.css  NavBar.jsx  index.js
Kredilibranza FrontEnd/Kredilibranza/src/pages/: HomePage.jsx
(+21 files in other folders)
