[tool.poetry]
name = "kredilibranza-backend"
version = "0.1.0"
description = ""
authors = ["jounBrown <vsvrrara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
